[gd_scene load_steps=13 format=2]

[ext_resource path="res://models/Pilot.glb" type="PackedScene" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://scripts/Spin.gd" type="Script" id=3]
[ext_resource path="res://assets/Sixtyfour-Regular-VariableFont_BLED,SCAN.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/common/Cursor.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/start.png" type="Texture" id=6]
[ext_resource path="res://assets/quit.png" type="Texture" id=7]
[ext_resource path="res://assets/coop.png" type="Texture" id=8]
[ext_resource path="res://scripts/ui/LobbyUI.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 95
font_data = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="PointMesh" id=3]
material = SubResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 640.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 29.5, 14 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "ODISEA"
align = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 137.0
margin_top = 180.0
margin_right = 502.0
margin_bottom = 480.0
size_flags_horizontal = 6

[node name="Preview3D" type="ViewportContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 229.0
margin_bottom = 300.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Viewport" type="Viewport" parent="VBoxContainer/HBoxContainer/Preview3D"]
size = Vector2( 229, 300 )
own_world = true
handle_input_locally = false
hdr = false
render_target_update_mode = 3

[node name="Root3D" type="Spatial" parent="VBoxContainer/HBoxContainer/Preview3D/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )
script = ExtResource( 3 )

[node name="Light" type="DirectionalLight" parent="VBoxContainer/HBoxContainer/Preview3D/Viewport/Root3D"]
transform = Transform( 0.965926, -0.183013, 0.183013, 0, 0.781, 0.624516, -0.258819, -0.597132, 0.758819, 0, 0, 0 )
light_energy = 0.9

[node name="Camera" type="Camera" parent="VBoxContainer/HBoxContainer/Preview3D/Viewport/Root3D"]
transform = Transform( 0.99957, 2.56104e-09, -0.0293173, 0.00211857, 0.997386, 0.0722323, 0.0292407, -0.0722634, 0.996957, 0, 2.32192, 2.3521 )
current = true

[node name="PilotModel" parent="VBoxContainer/HBoxContainer/Preview3D/Viewport/Root3D" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="CPUParticles" type="CPUParticles" parent="VBoxContainer/HBoxContainer/Preview3D/Viewport/Root3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
amount = 20
mesh = SubResource( 3 )
emission_shape = 1
emission_sphere_radius = 2.5
direction = Vector3( -0.2, 0, 0 )
gravity = Vector3( 0, -0.6, 0 )
initial_velocity = 0.5
initial_velocity_random = 0.6
color = Color( 0.172549, 0.607843, 0.615686, 1 )

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 233.0
margin_right = 365.0
margin_bottom = 300.0
size_flags_horizontal = 2

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer/Buttons"]
margin_right = 132.0
margin_bottom = 74.0
size_flags_horizontal = 2
size_flags_vertical = 6
icon = ExtResource( 6 )
icon_align = 1

[node name="NetworkButton" type="Button" parent="VBoxContainer/HBoxContainer/Buttons"]
margin_top = 101.0
margin_right = 65.0
margin_bottom = 121.0
size_flags_horizontal = 2
size_flags_vertical = 6
text = "Network"

[node name="CoopButton" type="Button" parent="VBoxContainer/HBoxContainer/Buttons"]
margin_top = 148.0
margin_right = 132.0
margin_bottom = 222.0
size_flags_horizontal = 2
size_flags_vertical = 6
icon = ExtResource( 8 )
icon_align = 1

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer/Buttons"]
margin_top = 226.0
margin_right = 132.0
margin_bottom = 300.0
size_flags_horizontal = 2
size_flags_vertical = 6
icon = ExtResource( 7 )
icon_align = 1

[node name="NetworkPanel" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 369.0
margin_right = 620.0
margin_bottom = 300.0
script = ExtResource( 9 )

[node name="ServerList" type="ItemList" parent="VBoxContainer/HBoxContainer/NetworkPanel"]
margin_right = 251.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 172 )

[node name="JoinServerButton" type="Button" parent="VBoxContainer/HBoxContainer/NetworkPanel"]
margin_top = 176.0
margin_right = 251.0
margin_bottom = 196.0
text = "Join Selected Server"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/NetworkPanel"]
margin_top = 200.0
margin_right = 251.0
margin_bottom = 224.0

[node name="HostButton" type="Button" parent="VBoxContainer/HBoxContainer/NetworkPanel/HBoxContainer"]
margin_right = 42.0
margin_bottom = 24.0
text = "Host"

[node name="JoinIPButton" type="Button" parent="VBoxContainer/HBoxContainer/NetworkPanel/HBoxContainer"]
margin_left = 46.0
margin_right = 117.0
margin_bottom = 24.0
text = "Join by IP"

[node name="IPLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/NetworkPanel/HBoxContainer"]
margin_left = 121.0
margin_right = 251.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
placeholder_text = "Enter IP"

[node name="Cursor" parent="." instance=ExtResource( 5 )]
position = Vector2( 557, 291 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 640.0
margin_bottom = 480.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[editable path="VBoxContainer/HBoxContainer/Preview3D/Viewport/Root3D/PilotModel"]
